Add more projects until 2018 in get projects

--- a/views/get.ejs
+++ b/views/get.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs') %>
 <%- include('partials/main_nav.ejs') %>
-<!-- Filename: get.ejs | Author: Juan Arevalo | Date: 20-11-2024 -->
+<!-- Filename: get.ejs | Author: Juan Arevalo | Date: 21-11-2024 -->
 <div class="d-flex justify-content-center">
     <main class="container py-5 bg-black">
 
@@ -19,6 +19,171 @@
 
         <!-- Year Projects Accordion -->
         <div class="accordion accordion-flush" id="yearProjectsAccordion">
+
+            <!-- 2018 Projects -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading2018">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapse2018" aria-expanded="false" aria-controls="collapse2018">
+                        <h5>2018 Projects as TSG</h5>
+                    </button>
+                </h2>
+                <div id="collapse2018" class="accordion-collapse collapse" aria-labelledby="heading2018"
+                    data-bs-parent="#yearProjectsAccordion">
+                    <div class="accordion-body text-light text-opacity-75">
+
+                        <!-- Project -->
+                        <div class="timeline-item mb-4">
+                            <h6><strong>Assessing Hinge Neck Breakages and Ensuring Proper Installation on Hydraulic Face Shovels</strong></h6>
+                            <p><strong>Situation:</strong> A mining operation was experiencing frequent breakages of hinge necks on the front of their hydraulic face shovels. The customer was concerned that improper system greasing and the presence of unblasted material—due to local community issues—were contributing factors. They requested assistance in measuring the front components to identify any misalignments or wear that could be causing the failures.</p>
+                            <p><strong>Task:</strong> Conduct measurements of the shovel's front components to assess their condition, determine the root cause of the hinge neck breakages, and provide guidance to prevent future occurrences. Additionally, evaluate the repair processes at the welding facility responsible for overhauling these components.</p>
+                            <p><strong>Action:</strong></p>
+                            <ul>
+                                <li>Visited the mining site to perform measurements on the shovel's front components, focusing on the bushing faces due to safety constraints.</li>
+                                <li>Despite challenges such as heavy winds affecting laser measurements and surfaces contaminated with grease, obtained critical measurements (e.g., dimensions A, B, C, D, and ILW) to assess potential misalignments.</li>
+                                <li>Collaborated with the customer to discuss findings and address their concerns, ensuring they were satisfied with the reported measurements.</li>
+                                <li>Visited the welding shop responsible for overhauling the shovel components to observe the repair processes and discuss the frequent hinge neck breakages.</li>
+                                <li>Examined previously repaired hinge necks, noting that some had been rebuilt and operated for significant hours without issues.</li>
+                                <li>Assessed the welding procedures, materials used (such as H4 tubular wire and solid wire E110-18), and heat control measures to ensure quality rebuilds.</li>
+                                <li>Identified the need for proper installation instructions for specific components to prevent future failures.</li>
+                                <li>Agreed to prioritize technical support presence during the upcoming installation of the front and backboard on the hydraulic face shovel.</li>
+                            </ul>
+                            <p><strong>Results:</strong></p>
+                            <ul>
+                                <li>Provided the customer with accurate measurements and a thorough assessment of the shovel's front components, addressing their immediate concerns.</li>
+                                <li>Confirmed that the welding shop maintained high-quality repair standards, contributing to improved hinge neck integrity.</li>
+                                <li>Established a plan to offer on-site technical support during future installations, aiming to prevent recurrence of hinge neck breakages.</li>
+                                <li>Enhanced the customer's confidence in the support provided, fostering a stronger professional relationship.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 2017 Projects -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading2017">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapse2017" aria-expanded="false" aria-controls="collapse2017">
+                        <h5>2017 Projects as TSG</h5>
+                    </button>
+                </h2>
+                <div id="collapse2017" class="accordion-collapse collapse" aria-labelledby="heading2017"
+                    data-bs-parent="#yearProjectsAccordion">
+                    <div class="accordion-body text-light text-opacity-75">
+
+                        <!-- Project -->
+                        <div class="timeline-item mb-4">
+                            <h6><strong>Investigating Shroud Failures and Enhancing GET Performance on Hydraulic Front Shovels</strong></h6>
+                            <p><strong>Situation:</strong> A mining operation was experiencing issues with their hydraulic front shovels due to the falling of center shrouds. These failures were causing operational inefficiencies, safety concerns, and premature wear of Ground Engaging Tools (GET). Additionally, the customer sought to improve the overall performance and lifespan of their GET systems across their fleet.</p>
+                            <p><strong>Task:</strong> Investigate the root cause of the center shroud failures, evaluate the performance of the GET on the hydraulic front shovels, and provide effective solutions to enhance equipment reliability and productivity.</p>
+                            <p><strong>Action:</strong></p>
+                            <ul>
+                                <li>Conducted an on-site visit to inspect the equipment and assess the failure mechanisms of the center shrouds.</li>
+                                <li>Identified that a specific component at the bottom of the shroud assembly had a radius causing negative effects, leading to failures.</li>
+                                <li>Developed a solution involving modifications to the component, increasing the tolerance by 3 mm on the back base to prevent future failures.</li>
+                                <li>Evaluated the shroud rebuilding practices and found that tolerances were at maximum levels, recommending adjustments to decrease the gap and improve fitment.</li>
+                                <li>Noted that the new design of the lifting eye on the side of the shroud was causing installation difficulties; proposed modifications to facilitate easier installation.</li>
+                                <li>Analyzed wear patterns on shrouds in different positions, observing premature wear in specific areas, and recommended targeted measures to address these issues.</li>
+                                <li>Reviewed the use of wing shrouds and advised that certain protective measures were unnecessary, potentially reducing premature removal and replacement.</li>
+                                <li>Met with the customer's reliability manager to discuss findings and agreed on implementing the proposed solutions.</li>
+                            </ul>
+                            <p><strong>Results:</strong></p>
+                            <ul>
+                                <li>Provided the customer with a comprehensive understanding of the root causes of the shroud failures.</li>
+                                <li>Implemented modifications to components and maintenance practices, reducing the likelihood of future shroud falls.</li>
+                                <li>Improved the installation process for shrouds by addressing design issues, enhancing efficiency and safety.</li>
+                                <li>Enhanced the performance and lifespan of the GET through targeted recommendations and adjustments.</li>
+                                <li>Increased customer satisfaction by delivering prompt and effective solutions, strengthening the professional relationship.</li>
+                            </ul>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+
+            <!-- 2016 Projects -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading2016">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapse2016" aria-expanded="false" aria-controls="collapse2016">
+                        <h5>2016 Projects as TSG</h5>
+                    </button>
+                </h2>
+                <div id="collapse2016" class="accordion-collapse collapse" aria-labelledby="heading2016"
+                    data-bs-parent="#yearProjectsAccordion">
+                    <div class="accordion-body text-light text-opacity-75">
+
+                        <!-- Project -->
+                        <div class="timeline-item mb-4">
+                            <h6><strong>Analyzing and Resolving Lip Shroud Breakages on Front-End Loaders</strong></h6>
+                            <p><strong>Situation:</strong> A mining operation was experiencing a high number of broken lip shrouds on their front-end loaders (FELs), with 21 incidents reported over a four-month period. The majority of breakages occurred on a specific model of FEL, particularly on one unit that had eight breakages. These failures were causing significant operational challenges and downtime.</p>
+                            <p><strong>Task:</strong> Conduct a thorough analysis to determine the root causes of the lip shroud breakages and develop effective solutions to prevent future occurrences.</p>
+                            <p><strong>Action:</strong></p>
+                            <ul>
+                                <li>Visited the mining site to inspect the affected FELs, focusing on the unit with the highest number of breakages.</li>
+                                <li>Attempted to remove the lip shrouds for inspection but encountered difficulties due to hinge pin obstructions and the accumulation of fine materials (argillic) between the shroud and lip.</li>
+                                <li>Observed an excess of 1 mm on the boss within the hinge pin gap, contributing to removal challenges.</li>
+                                <li>Noted the presence of fine material trapped between the shroud and lip, which can increase stress and wear.</li>
+                                <li>Utilized gauges to measure wear on the front lip but found that incorrect reference points were being used, leading to inaccurate assessments.</li>
+                                <li>Corrected the measurement method and determined that there was a 4 mm wear on both the left and right sides of the front lip.</li>
+                                <li>Identified that wear in the high-stress areas of the front lip was a primary factor contributing to the shroud breakages.</li>
+                                <li>Recognized the need to check wear on the bed lip of the hinge pin, which could also be a contributing factor.</li>
+                                <li>Recommended the design and manufacture of a new specialized gauge to accurately measure wear on the lip and hinge pin areas.</li>
+                            </ul>
+                            <p><strong>Results:</strong></p>
+                            <ul>
+                                <li>Successfully identified the root causes of the lip shroud breakages, allowing for targeted corrective actions.</li>
+                                <li>Developed a plan to create a new gauge to improve the accuracy of wear measurements, facilitating better maintenance practices.</li>
+                                <li>Scheduled follow-up actions to address the lip wear issues using the new gauge, aiming to reduce future breakages and enhance equipment reliability.</li>
+                                <li>Met the objectives of the analysis, providing the mining operation with actionable insights and solutions to improve their FEL performance.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 2015 Projects -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading2015">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapse2015" aria-expanded="false" aria-controls="collapse2015">
+                        <h5>2015 Projects as TSG</h5>
+                    </button>
+                </h2>
+                <div id="collapse2015" class="accordion-collapse collapse" aria-labelledby="heading2015"
+                    data-bs-parent="#yearProjectsAccordion">
+                    <div class="accordion-body text-light text-opacity-75">
+
+                        <!-- Project 1-->
+                        <div class="timeline-item mb-4">
+                            <h6><strong>Repairing Cracks on a Mining Shovel Dipper Door During Preventive Maintenance</strong></h6>
+                            <p><strong>Situation:</strong> A large mining shovel was experiencing structural issues due to numerous cracks found on its dipper (bucket) door. An initial inspection identified 21 cracks, but during preventive maintenance (PM), an additional 9 cracks were discovered, bringing the total to 30. These cracks posed a significant risk to the shovel's operational integrity and safety, requiring immediate attention to prevent downtime and potential accidents.</p>
+                            <p><strong>Task:</strong> Provide technical support and supervision to repair the identified cracks on the dipper door during the scheduled PM. Ensure that the repairs were conducted according to proper welding procedures, addressing the most severe cracks within the limited maintenance window.</p>
+                            <p><strong>Action:</strong></p>
+                            <ul>
+                                <li>Collaborated with the welding supervisor to develop specific welding procedures tailored to the crack repairs.</li>
+                                <li>Prioritized the repair of the most severe cracks during the PM period.</li>
+                                <li>Utilized appropriate welding materials (Dual Shield II 80-Ni1H4 wire) to ensure high-quality and durable welds.</li>
+                                <li>Maintained optimal welding conditions by monitoring and keeping the work temperature above 150°C.</li>
+                                <li>Reinforced critical joints by installing A514 steel plates over the welding joints of the cross-brace and flange-brace.</li>
+                                <li>Added wear plates with a hardness of 500 HB on the bottom of the dipper door at the customer's request to enhance durability.</li>
+                                <li>Coordinated with the customer's team to ensure preliminary tasks, such as cleaning with air-arc gouging, were completed promptly to allow repair work to begin.</li>
+                                <li>Developed a plan for future PMs to address remaining cracks, install gusset plates on hoist lugs, replace non-original rubber bumpers with original ones, and reinforce weld bevels using specialized tools.</li>
+                            </ul>
+                            <p><strong>Results:</strong></p>
+                            <ul>
+                                <li>Successfully repaired 12 of the most severe cracks during the PM, significantly improving the structural integrity of the dipper door.</li>
+                                <li>Reduced the risk of operational failure and enhanced the safety of the shovel during excavation activities.</li>
+                                <li>Established a collaborative workflow with the customer's maintenance team, leading to more efficient repair processes.</li>
+                                <li>Prepared for subsequent maintenance activities to completely resolve the cracking issues and implement long-term preventative measures.</li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
 
             <!-- 2014 Projects -->
             <div class="accordion-item">
