Enhance with an additional result to 2020 GET projects

--- a/views/get.ejs
+++ b/views/get.ejs
@@ -55,6 +55,7 @@
                                 <li>Achieved accurate prediction of GET change intervals, with an error margin of only 0.25 inches on the length of points.</li>
                                 <li>The application received a customer award for Digital Transformation in 2020.</li>
                                 <li>Completed the project within the budget, not exceeding the allocated $5,000.</li>
+                                <li>The success of the application in controlling GET wear on ten cable shovels helped convince the customer to switch an additional shovel to our products, increasing the total to eleven shovels by the end of 2020.</li>
                             </ul>
                         </div>
 
